MDEV-17313 Data race in ib_counter_t

ib_counter_t: make all reads/writes to m_counter relaxed atomical